# health-policy-mapper

./: .gitignore  README.md  pyproject.toml
data/output/90_prep_sti/gemini-2.5-flash-lite_2025-08-23_11-11-10/: tmpdha1kd86.csv  (+2 more)
data/reference/: reference_90_prep_sti_cleaned.csv
front-end/: index.html  tailwind.config.ts
front-end/src/: App.tsx  index.css
front-end/src/components/: AdminLogin.tsx  ApprovedContentTabs.tsx  AuthGuard.tsx  DashboardStats.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  PendingReportsTable.tsx  ScamReportForm.tsx  TextInput.tsx
front-end/src/hooks/: useAuth.tsx
front-end/src/pages/: AdminDashboard.tsx  Index.tsx
front-end/supabase/: config.toml
front-end/supabase/migrations/: 20250717191934-5fe51070-563b-4f31-9e28-afaf17942a44.sql  20250717202208-5d69e795-1991-49b4-9d90-20ddcbc3e521.sql  20250717205432-f494c9af-e2ec-4be3-b00a-147a86edacb5.sql  20250718212126-11bc177d-bb83-4a76-b6cd-dc2cf49e70ff.sql  20250801200519_54fd54bf-ae5c-46e2-9f38-20e1a27ceb23.sql
src/: config.py  main.py
src/application/interfaces/: eval.py  job_repository.py  llm_client.py
src/application/use_cases/: aggregator.py  job_lifecycle.py  llm_processor.py
src/application/utils/: prompt_builder.py  temp_file_handler.py
src/domain/entities/: job.py
src/domain/value_objects/: column.py
src/infrastructure/llm_clients/: gemini_client.py
src/infrastructure/repository/: job_repo_inmemory.py
src/presentation/: dependencies.py  schema.py
src/presentation/controllers/: eval_controller.py  job_controller.py
src/presentation/parsers/: column_parser.py
(+11 files in other folders)
